--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,6 @@ body {
 */
 
 .heder {
-  
   display: block;
 
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -98,7 +97,6 @@ body {
   display: flex;
 }
 .heder-nav {
-  
   align-items: center;
   gap: 40px;
 
@@ -133,7 +131,6 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   margin-right: 76px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition: color 250ms ease, transform cubic-bezier(0.4, 0, 0.2, 1);
 }
 .heder-logo-color {
@@ -198,9 +195,11 @@ body {
 @media screen and (min-width: 768px) {
   .heder-nav-contact {
     display: flex;
-    
+    padding: 16px 0;
   }
 }
+
+
 
 .heder-contakt-lisk {
   display: flex;
@@ -209,10 +208,9 @@ body {
   gap: 40px;
   margin: 0;
 }
-@media screen and (min-width: 768px) and (max-width: 1157.9px){
+@media screen and (min-width: 768px) and (max-width: 1157.9px) {
   .heder-contakt-lisk {
     display: block;
-    
   }
 }
 
@@ -224,7 +222,20 @@ body {
   letter-spacing: 0.02em;
   color: var(--slate);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+ 
 }
+@media screen and (max-width: 1157.9px) {
+  .heder-contakt-linc{
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+}
+
 /**
   |============================
   | mob menu
@@ -300,7 +311,7 @@ body {
   margin-bottom: 40px;
 }
 .mobile-menu-item:focus {
-color: var(--iris);
+  color: var(--iris);
 }
 
 .mobile-tel-item {
@@ -320,7 +331,6 @@ color: var(--iris);
   }
 }
 
-
 .mobile-mail-item {
   font-family: "Roboto";
   font-style: normal;
@@ -334,7 +344,6 @@ color: var(--iris);
 .mobile-mail-item:focus {
   color: var(--iris);
 }
-
 
 .mobile-menu-link {
   font-family: "Roboto";
@@ -377,6 +386,7 @@ color: var(--iris);
   min-height: 432px;
   margin-left: auto;
   margin-right: auto;
+  
 
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -389,14 +399,14 @@ color: var(--iris);
 
   display: block;
   color: var(--white);
-  padding: 188px 0;
-  margin-bottom: 10px;
+  padding: 112px 0;
+  
 }
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
-    .hero {
-      background-image: linear-gradient(
+  .hero {
+    background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
@@ -414,21 +424,22 @@ color: var(--iris);
       url("../images/hero/Dark-bgtab-@1x.jpg");
   }
   @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .hero {
       background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/hero/Dark-bgtab-@2x.jpg");
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url("../images/hero/Dark-bgtab-@2x.jpg");
+    }
   }
-}
 }
 @media screen and (min-width: 769px) {
   .hero {
     max-width: 1440px;
     min-height: 600px;
+    padding: 188px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -436,29 +447,46 @@ color: var(--iris);
       url("../images/hero/people-office\ 1dex-@1x.jpg");
   }
   @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
     .hero {
       background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../images/hero/people-office\ 1dex-@2x.jpg");
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url("../images/hero/people-office\ 1dex-@2x.jpg");
+    }
   }
-}
 }
 
 .nero-title {
   margin: auto;
-  max-width: 496px;
-  font-size: 56px;
+
+  padding-bottom: 72px;
+
+  font-family: "Roboto";
+  font-style: normal;
   font-weight: 700;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
   text-decoration: none;
   text-transform: none;
-  text-align: center;
-  padding-bottom: 48px;
+  max-width: 320px;
+}
+@media screen and (min-width: 768px) {
+  .nero-title {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .nero-title {
+    padding-bottom: 48px;
+  }
 }
 
 .nero-btn {
@@ -521,9 +549,17 @@ color: var(--iris);
   line-height: 1.11;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .feature-item-title {
+    text-align: start;
+
+  }
 }
 @media screen and (min-width: 1158px) {
   .feature-item-title {
+    text-align: start;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -543,12 +579,16 @@ color: var(--iris);
 @media screen and (min-width: 1158px) {
   .feature-item {
     width: calc((100% - 72px) / 4);
+    
   }
 }
 .feature-text {
   color: var(--slate);
 
+  font-family: 'Roboto';
+  font-style: normal;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
 
@@ -562,6 +602,7 @@ color: var(--iris);
 @media screen and (min-width: 1158px) {
   .feature-text {
     width: auto;
+    font-weight: 400;
   }
 }
 .feature-svg {
@@ -630,11 +671,6 @@ color: var(--iris);
   padding-top: 96px;
   padding-bottom: 96px;
 }
-@media screen and (min-width: 768px) {
-  .team-section {
-    min-width: 768px;
-  }
-}
 @media screen and (min-width: 1158px) {
   .team-section {
     min-width: 1158px;
@@ -670,7 +706,6 @@ color: var(--iris);
     gap: 64px 24px;
   }
 }
-
 
 .team-section-item {
   display: block;
@@ -771,10 +806,7 @@ color: var(--iris);
     gap: 72px 24px;
   }
 }
-@media screen and (min-width: 1158px) {
-  .customers-socials {
-  }
-}
+
 
 .customers {
   display: flex;
@@ -888,12 +920,7 @@ color: var(--iris);
     margin: 0;
   }
 }
-@media screen and (min-width: 1158px) {
-  .footer-cont-logo {
-    text-align: start;
-    margin: 0;
-  }
-}
+
 
 .footer-logo {
   color: var(--iris);
@@ -928,10 +955,7 @@ color: var(--iris);
   margin: auto;
   margin-bottom: 72px;
 }
-@media screen and (min-width: 768px) {
-  .footer-text {
-  }
-}
+
 @media screen and (min-width: 1158px) {
   .footer-text {
     margin-bottom: 0;
@@ -955,10 +979,7 @@ color: var(--iris);
   margin: auto;
   text-align: center;
 }
-@media screen and (min-width: 768px) {
-  .footer-social {
-  }
-}
+
 @media screen and (min-width: 1158px) {
   .footer-social {
     margin: 0;
@@ -1054,10 +1075,7 @@ color: var(--iris);
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-@media screen and (min-width: 768px) {
-  .footer-form-title {
-  }
-}
+
 @media screen and (min-width: 1158px) {
   .footer-form-title {
     margin: 0;
@@ -1074,10 +1092,7 @@ color: var(--iris);
     display: flex;
   }
 }
-@media screen and (min-width: 1158px) {
-  .footer-form-box {
-  }
-}
+
 .footer-form-lable {
   position: relative;
   margin: auto;
@@ -1094,10 +1109,7 @@ color: var(--iris);
     width: 264px;
   }
 }
-@media screen and (min-width: 1158px) {
-  .footer-form-lable {
-  }
-}
+
 .footer-form-tag {
   position: absolute;
   top: 50%;
@@ -1198,14 +1210,11 @@ color: var(--iris);
   .control-list {
     justify-content: center;
     margin-bottom: 64px;
-
   }
 }
 @media screen and (min-width: 768px) {
   .control-list {
-    
     margin-bottom: 72px;
-    
   }
 }
 
@@ -1228,8 +1237,7 @@ color: var(--iris);
 @media screen and (min-width: 1158px) {
   .gallery {
     min-width: 1158px;
-    padding: 120px 0 ;
-    
+    padding: 120px 0;
   }
 }
 
@@ -1242,7 +1250,6 @@ color: var(--iris);
 }
 .gallery-list {
   list-style: none;
- 
 }
 
 .btn-port {
@@ -1304,7 +1311,6 @@ color: var(--iris);
   justify-content: center;
   gap: 24px;
   row-gap: 48px;
-  
 }
 @media screen and (min-width: 768px) {
   .gallery-lisk {
@@ -1317,13 +1323,11 @@ color: var(--iris);
   .gallery-lisk {
     min-width: 1158px;
     row-gap: 48px;
-    
   }
 }
 .gallery-link {
   display: block;
   cursor: pointer;
-  
 
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -1344,7 +1348,6 @@ color: var(--iris);
 .team-thumb {
   position: relative;
   overflow: hidden;
-  
 }
 
 .overlay-text {
@@ -1381,9 +1384,8 @@ color: var(--iris);
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-
 .gallery-item-title {
-padding: 10px;
+  
 
   margin-bottom: 8px;
 
@@ -1432,7 +1434,6 @@ padding: 10px;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-   
   width: 95vw;
   min-height: 576px;
 
@@ -1584,7 +1585,7 @@ padding: 10px;
   appearance: none;
 
   display: block;
-  width: 16px;
+  min-width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
